--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
         <div class="">
           <!--  <img class="topcloud" src="img/cloud.png" alt="cloud img">-->
-          <img class="mountain" src="./img/logo_transparent.png" alt="mountain img">
+          <img class="mountain" src="img/logo_transparent.png" alt="mountain img">
           <h1>Welcome to website</h1>
           <h2 class="stu">where <strong>Job Application</strong> is made easy.</h2>
           <!--<img class="botcloud" src="img/cloud.png" alt="cloud img">-->
