--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
               src="https://media.istockphoto.com/photos/top-view-of-stack-of-resume-filesmagnifier-on-black-surfaceconcept-of-picture-id1138817616?k=20&m=1138817616&s=612x612&w=0&h=ezqNAIhLMaEo40B83Qy39QZGu3wm-mp_5vvPwHPLvJ8=" alt=""> </div>
           <div class="content d-flex flex-column align-items-center justify-content-center">
             <div>
-              <a href="C:\Web Development\try\1RESUME\form\form.html">
+              <a href="1RESUME/form/form.html">
                 <h3 class="text fs-5">RESUME</h3>
                 <p class="fs-6 text">A resume is a formal document which is usually accompanied by a customized cover letter in which the applicant expresses an interest in a specific job or company and draws attention to the most relevant specifics on the resume</p>
               </a>
@@ -67,7 +67,7 @@
           <div class="imgContainer"> <img src="img/biodata_img.jpg" alt=""> </div>
           <div class="content d-flex flex-column align-items-center justify-content-center">
             <div>
-              <a href="C:\Web Development\try\3BIODATA\form\form.html">
+              <a href="3BIODATA/form/form.html">
                 <h3 class=" fs-5 text">BIO-DATA</h3>
                 <p class="fs-6 text">Biodata, short for biographical data, is a one- to three-page document you use when applying for a job. Your biodata summarizes most aspects of your life, including personal details, education, skills and work experience.</p>
               </a>
