--- a/2CV/form/form.html
+++ b/2CV/form/form.html
@@ -211,7 +211,7 @@
       </div>
 
       <div class="text-center box">
-        <a href="C:\Web Development\try\2CV\template\templates.html"><button onclick="gencv()" class="btn btn-outline-dark btn-sm mt-2" type="button" name="button">Generate CV</button></a>
+        <a href="2CV/template/templates.html"><button onclick="gencv()" class="btn btn-outline-dark btn-sm mt-2" type="button" name="button">Generate CV</button></a>
 
       </div>
 
