--- a/1RESUME/form/form.html
+++ b/1RESUME/form/form.html
@@ -186,7 +186,7 @@
         </div>
 
         <div class="text-center box">
-          <a href="/template/templates1.html"><button onclick="genresume()" class="btn btn-dark btn-sm mt-2" type="button" name="button">Generate Resume</button></a>
+          <a href="1RESUME/template/templates1.html"><button onclick="genresume()" class="btn btn-dark btn-sm mt-2" type="button" name="button">Generate Resume</button></a>
 
         </div>
 
